<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<ImageView
    android:id="@+id/regLogo"
    android:layout_width="130dp"
    android:layout_height="130dp"
    android:background="@drawable/computer3"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="70dp"
    android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/logEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:textColorHint="@android:color/black"
        android:layout_below="@id/regLogo"
        android:layout_marginTop="20dp"
        android:hint="@string/Email"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:layout_margin="15dp"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/logPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logEmail"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:textColorHint="@android:color/black"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/passwordfinalwhite"
        android:layout_margin="15dp"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:layout_below="@id/logPassword"
        android:layout_alignParentRight="true"
        android:textSize="18sp"
        android:layout_marginBottom="25sp"
        android:textColor="@android:color/black"
        android:padding="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SignIn"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:layout_margin="25sp"
        android:layout_below="@id/txtForgot"
        android:id="@+id/btnlogin"
        android:onClick="checkLogin"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newuser"
        android:layout_below="@id/btnlogin"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:id="@+id/txtnew"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:layout_below="@id/txtnew"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        />
    </RelativeLayout>
</ScrollView>