<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".register_activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<ImageView
    android:id="@+id/regLogo"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:background="@drawable/computer3"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="15dp"/>
    <EditText
        android:id="@+id/regEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:textColorHint="@android:color/black"
        android:layout_below="@id/regLogo"
        android:layout_marginTop="15dp"
        android:hint="@string/Email"
        android:padding="8dp"
        android:inputType="textEmailAddress"
        android:layout_margin="15dp"
        android:textSize="22sp"/>
    <!--<EditText
        android:id="@+id/regUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/regEmail"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/username"
        android:hint="@string/UserName"
        android:drawablePadding="10dp"
        android:textColorHint="@android:color/black"
        android:padding="8dp"
        android:layout_margin="15dp"
        android:textSize="22sp"/>
-->
        <!--<EditText
            android:id="@+id/regCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/regUsername"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="10dp"
            android:gravity="left"
            android:hint="Code"
            android:padding="8dp"
            android:textColorHint="@android:color/black"
            android:textSize="22sp" />-->
       <!-- <EditText
            android:id="@+id/regPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:layout_toRightOf="@id/regCode"
            android:layout_below="@id/regUsername"
            android:textColorHint="@android:color/black"
            android:hint="Enter Number"
            android:layout_marginLeft="0dp"
            android:padding="8dp"
            android:layout_margin="15dp"
            android:textSize="22sp"/>-->

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/regEmail"
        android:layout_marginTop="10dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/black"
        android:padding="8dp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/passwordfinalwhite"
        android:layout_margin="15dp"
        android:textSize="22sp"/>
    <EditText
        android:id="@+id/regCPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/black"
        android:layout_below="@id/regPassword"
        android:layout_marginTop="10dp"
        android:hint="@string/ConfirmPassword"
        android:padding="8dp"
        android:inputType="textPassword"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/passwordfinalwhite"
        android:layout_margin="15dp"
        android:textSize="22sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_below="@id/regCPassword"
        android:layout_centerHorizontal="true"
        android:text="SignUp"
        android:id="@+id/btnRegister"
        android:textSize="25sp"
        android:onClick="checkRegistration"
        android:background="@drawable/buttonshape"
        android:textAllCaps="false"/>
        <TextView
            android:id="@+id/simpletxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already"
            android:layout_below="@id/btnRegister"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/txtlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log"
            android:layout_below="@id/simpletxt"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            />
    </RelativeLayout>


</ScrollView>